Ensure jdk 1.8 compatibility